--- a/po/cs.po
+++ b/po/cs.po
@@ -1,16 +1,16 @@
-# Polish translation for sopcast-player
-# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# Czech translation for sopcast-player
+# Copyright (c) 2010 Rosetta Contributors and Canonical Ltd 2010
 # This file is distributed under the same license as the sopcast-player package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2011-04-09 21:35+0000\n"
-"Last-Translator: Dinth <dinth@wikipasy.pl>\n"
-"Language-Team: Polish <pl@li.org>\n"
+"PO-Revision-Date: 2010-11-15 15:56+0000\n"
+"Last-Translator: Konki <pavel.konkol@seznam.cz>\n"
+"Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,183 +19,181 @@ msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Ponowna próba kanału"
+msgstr "Kanál se znovu zkouší"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "Łączenie"
+msgstr "Připojuje se"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
-msgstr "Buforowanie"
+msgstr "Bufferuje se"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
 msgid "Buffer"
-msgstr "Bufor"
+msgstr "Buffer"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "Przewodnik po kanałach ostatnio zaktualizowany"
+msgstr "Kanálový průvodce byl naposledy aktualizován"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
 msgid "SopCast Player"
-msgstr "Odtwarzacz SopCast"
+msgstr "Přehrávač SopCast"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Channel Guide"
-msgstr "Przewodnik po kanałach"
+msgstr "Kanálový průvodce"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
 msgid "Open Sop Address"
-msgstr "Otwórz adres Sop"
+msgstr "Otevřít Sop adresu"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "Wpisz adres Sop"
+msgstr "Vložte Sop adresu"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Name"
-msgstr "Nazwa"
+msgstr "Název"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "Grupa kanałów"
+msgstr "Skupina kanálů"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Classification"
-msgstr "Klasyfikacja"
+msgstr "Třídění"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "Format strumienia"
+msgstr "Formát proudu"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "QC"
-msgstr "Jakość kanału"
+msgstr "QC"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "QS"
-msgstr "Jakość strumienia"
+msgstr "QS"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Description"
-msgstr "Opis"
+msgstr "Umístění"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "Kanały"
+msgstr "Kanály"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
 msgid "Press Esc to exit fullscreen"
-msgstr "Naciśnij klawisz Esc, aby opuścić tryb pełnoekranowy"
+msgstr "Pro ukončení režimu celé obrazovky stiskněte Esc"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "Łączenie z serwerem"
+msgstr "Kontaktuje se server"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "Aktualizacja bazy danych"
+msgstr "Aktualizuje se databáze"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "Aktualizacja przewodnika po kanałach zakończona"
+msgstr "Aktualizace kanálového průvodce byla dokončena"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr ""
-"Błąd pobierania przewodnika po kanałach z powodu problemów z połączeniem "
-"sieciowym"
+msgstr "Kanálovému průvodci se nepodařilo vyhledat důvod potíží se sítí"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "Ściąganie przewodnika po kanałach"
+msgstr "Stahuje se kanálový průvodce"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
-msgstr "_Plik"
+msgstr "_Soubor"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
-msgstr "> Przewodnik po kanałach"
+msgstr "> Kanálový průvodce"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "Zapisz ten kanał w zakładkach"
+msgstr "Přidat tento kanál do záložek"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
-msgstr "Głośność:"
+msgstr "Hlasitost:"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
-msgstr "_Tryb pełnoekranowy"
+msgstr "_Celá obrazovka"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Help"
-msgstr "Pomo_c"
+msgstr "_Pomoc"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_View"
-msgstr "_Widok"
+msgstr "_Zobrazit"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
-msgstr "_Zakładki"
+msgstr "_Záložky"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
-msgstr "<i>Ostatnia aktualizacja: </i>"
+msgstr "<i>Naposledy aktualizováno: </i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "Ostatnia aktualizacja: "
+msgstr "Naposledy aktualizováno: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
-msgstr "Nigdy"
+msgstr "Nikdy"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>Częstotliwość aktualizacji przewodnika po kanałach</b>"
+msgstr "<b> Frekvence automatických aktualizací kanálového průvodce</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr "<b>Język przewodnika po kanałach</b>"
+msgstr "<b>Jazyk kanálového průvodce</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>Wygląd przewodnika po kanałach:</b>"
+msgstr "<b>Formát kanálového průvodce:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>Adres URL przewodnika po kanałach</b>"
+msgstr "<b>URL kanálového průvodce</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b>Minął czas oczekiwania</b>"
+msgstr "<b>Konec časového limitu kanálu</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr "<b>Odtwarzacz mediów</b>"
+msgstr "<b>Přehrávač multimédií</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
@@ -203,152 +201,152 @@ msgstr "<b>Porty</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr "Klasyczny (oddzielne okna)"
+msgstr "Klasický (samostatná okna)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr "Polecenie: "
+msgstr "Příkaz: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr "Częstotliwość"
+msgstr "Frekvence"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr "Port przychodzący "
+msgstr "Příchozí port: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr "Język"
+msgstr "Jazyk"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr "Port wychodzący "
+msgstr "Odchozí port: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr "Odtwarzacz"
+msgstr "Přehrávač"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr "Porty statyczne"
+msgstr "Statické porty"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "Przekroczony limit czasu"
+msgstr "Čas vypršel"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
-msgstr "Adres URL: "
+msgstr "URL: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr "Jednolite (pojedyncze okno)"
+msgstr "Shoda (Jednoduché okno)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "Użyj zewnętrznego odtwarzacza"
+msgstr "Použít externí přehrávač"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr "Ukończono"
+msgstr "Dokončeno"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr "Serwer wyłączony"
+msgstr "Server spadl"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "Pobieranie"
+msgstr "Stahuje se"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr "Porty statyczne niedostępne"
+msgstr "Statické porty nejsou dostupné"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
 msgstr ""
-"Porty statyczne są niedostępne, czy chcesz kontynować używając portów "
-"dynamicznych?"
+"Statické porty nejsou dostupné, přejete si pokračovat v užívání dynamických "
+"portů?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
 msgid "<i>3 Seconds</i>"
-msgstr "<i>3 Sekundy</i>"
+msgstr "<i>3 vteřiny</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr "<i>30 Sekund</i>"
+msgstr "<i>30 vteřin</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr "<i>5 Minut</i>"
+msgstr "<i>5 minut</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i>Nigdy</i>"
+msgstr "<i>nikdy</i>"
 
 msgid "Screenshot"
-msgstr "Zrzut ekranu"
+msgstr "Snímek obrazovky"
 
 msgid "Name:"
-msgstr "Nazwa:"
+msgstr "Název:"
 
 msgid "Format:"
-msgstr "Format:"
+msgstr "Formát:"
 
 msgid "Bitrate:"
-msgstr "Szybkość transmisji:"
+msgstr "Datový tok:"
 
 msgid "Channel Group:"
-msgstr "Grupa kanałów:"
+msgstr "Skupina kanálů:"
 
 msgid "Classification:"
-msgstr "Klasyfikacja:"
+msgstr "Třídění:"
 
 msgid "Description:"
-msgstr "Opis:"
+msgstr "Umístění:"
 
 msgid "Preferences"
-msgstr "Preferencje"
+msgstr "Nastavení"
 
 msgid "Play"
-msgstr "Odtwórz"
+msgstr "Přehrát"
 
 msgid "Stop"
-msgstr "Zatrzymaj"
+msgstr "Zastavit"
 
 msgid "Always On Top"
-msgstr "Zawsze na wierzchu"
+msgstr "Vždy na střed"
 
 msgid "Show Controls"
-msgstr "Pokazuj kontrolki"
+msgstr "Zobrazit ovládací prvky"
 
 msgid "Chinese"
-msgstr "Chiński"
+msgstr "Čínsky"
 
 msgid "English"
-msgstr "Angielski"
+msgstr "Anglicky"
 
 msgid "<i>Daily</i>"
-msgstr "<i>Dziennie</i>"
+msgstr "<i>Denně</i>"
 
 msgid "<i>Program Start</i>"
-msgstr "<i>Start programu</i>"
+msgstr "<i>Spuštění programu</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>Dodaj kanał do ulubionych</b></big>"
+msgstr "<big><b>Záložka kanálu</b></big>"
 
 msgid "_Edit"
-msgstr "_Edycja"
+msgstr "_Upravit"
 
 msgid "Properties"
-msgstr "Właściwości"
+msgstr "Vlastnosti"
 
 msgid "Bookmark"
-msgstr "Ulubione"
+msgstr "Záložka"
 
 msgid "Show Toolbar"
-msgstr "Pokaż pasek narzędzi"
+msgstr "Zobrazit panel nástrojů"
