--- a/po/fi.po
+++ b/po/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2010-05-24 07:07+0000\n"
+"PO-Revision-Date: 2011-03-06 15:34+0000\n"
 "Last-Translator: Jiri Grönroos <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-11-14 13:12+0000\n"
-"X-Generator: Launchpad (build Unknown)\n"
+"X-Launchpad-Export-Date: 2011-04-23 21:32+0000\n"
+"X-Generator: Launchpad (build 12883)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
@@ -289,7 +289,7 @@ msgid "<i>Never</i>"
 msgstr "<i>Ei koskaan</i>"
 
 msgid "Screenshot"
-msgstr "Kuvankaappaus"
+msgstr "Kuvakaappaus"
 
 msgid "Name:"
 msgstr "Nimi:"
@@ -337,7 +337,7 @@ msgid "<i>Program Start</i>"
 msgstr "<i>Ohjelman aloitus</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>Kanava kirjanmerkki</b></big>"
+msgstr "<big><b>Kanavan kirjanmerkki</b></big>"
 
 msgid "_Edit"
 msgstr "_Muokkaa"
