--- a/po/vi.po
+++ b/po/vi.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2010-04-21 19:35+0000\n"
-"Last-Translator: favadi <Unknown>\n"
+"PO-Revision-Date: 2011-03-15 23:54+0000\n"
+"Last-Translator: Nguyen Duc Long <longnd.s8@gmail.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-11-14 13:12+0000\n"
-"X-Generator: Launchpad (build Unknown)\n"
+"X-Launchpad-Export-Date: 2011-04-23 21:32+0000\n"
+"X-Generator: Launchpad (build 12883)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Tải lại kênh"
+msgstr "Đang tải lại kênh"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
@@ -38,7 +38,7 @@ msgstr "Bộ đệm"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "Danh sách kênh đã cập nhật"
+msgstr "Danh sách kênh được cập nhật gần nhất"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
@@ -100,7 +100,7 @@ msgstr "Mô tả"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "Kênh"
+msgstr "Các kênh"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
@@ -109,7 +109,7 @@ msgstr "Ấn Esc để thoát chế độ toàn màn hình"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "Kết nối với máy chủ"
+msgstr "Đang kết nối với máy chủ"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
@@ -117,7 +117,7 @@ msgstr "Đang cập nhật cơ sở dữ liệu"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr ""
+msgstr "Danh sách kênh đã cập nhật xong"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
