--- a/INSTALL
+++ b/INSTALL
@@ -1,12 +1,11 @@
-Build Dependencies:
--libvlc-dev
+==Build Dependencies==
 -python
 -gettext
 -python-setuptools
 
-Runtime Dependencies:
+
+==Run-Time Dependencies==
 -python
--vlc 1.1.x
 -libvlc-dev
 -sp-auth
 -hicolor-icon-theme
@@ -14,19 +13,24 @@ Runtime Dependencies:
 -python-gobject
 -python-gtk2
 
-To install SopCast Player use the follow incantations (for system-wide installation be sure to do make install with root priveldges):
+
+==Build Instructions==
+To install SopCast Player use the follow incantations (for system-wide installation be sure to do make install with root priveldges, e.g. sudo):
 make
 make install
 
 
-
+==Alternative Build Instructions==
 An alternative to using the default directories would be as follows
 make
- make install PREFIX=/usr/local DESTDIR=my_destination_dir
+make install PREFIX=/usr/local DESTDIR=my_destination_dir
 
 
+==Uninstall Instructions==
 To uninstall sopcast-player, do:
      make uninstall
 
+==Make Clean Instructions==
 To clean the source tree, do:
      make clean
+     
