Fixed unicode issue with adding bookmarks. Issued maintenance release 0.7.1.
git-svn-id: http://sopcast-player.googlecode.com/svn/trunk@273 70e63da4-d337-11dd-8772-d1b041bf0e37

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
-sopcast-player (0.7.0~ppa1~oneiric1) oneiric; urgency=low
+sopcast-player (0.7.1~ppa1~hardy1) hardy; urgency=low
 
+   * 0.7.1
+     -Fixed unicode issue with adding bookmarks
+     
    * 0.7.0
      -VLCWidget now deals with the different versions of bindings automatically in a fail-back manner
      -Added ability to delete bookmarks
