--- a/INSTALL
+++ b/INSTALL
@@ -22,8 +22,8 @@ make install
 
 ==Alternative Build Instructions==
 An alternative to using the default directories would be as follows
-make
-make install PREFIX=/usr/local DESTDIR=my_destination_dir
+make PREFIX=/usr/local DESTDIR=my_destination_dir
+make install
 
 
 ==Uninstall Instructions==
