--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
-sopcast-player (0.7.3~ppa4~oneiric1) oneiric; urgency=low
-   
+sopcast-player (0.7.4~ppa~oneiric1) oneiric; urgency=low
+
+   * 0.7.4
+     -Fixed makefile to deal with different prefixes in a sane way
+     -Enabled smart searching for sp-sc-auth binary aliases
+     
    * 0.7.3
      -Added small fix for vlc bindings 1.0.x
      
@@ -88,4 +92,4 @@ sopcast-player (0.7.3~ppa4~oneiric1) oneiric; urgency=low
   * 0.1.0
     -Initial release
     
- -- Jason Scheunemann <jason.scheunemann@yahoo.com>  Sat, 14 May 2011 10:17:42 +0100
+ -- Jason Scheunemann <jason.scheunemann@yahoo.com>  Mon, 23 May 2011 19:43:51 +0100
