--- a/po/eu.po
+++ b/po/eu.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2010-06-19 19:33+0000\n"
-"Last-Translator: Josu Orbe <Unknown>\n"
+"PO-Revision-Date: 2011-04-26 16:40+0000\n"
+"Last-Translator: Oier Mees <Unknown>\n"
 "Language-Team: Basque <eu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-04-23 21:32+0000\n"
-"X-Generator: Launchpad (build 12883)\n"
+"X-Launchpad-Export-Date: 2012-05-06 12:52+0000\n"
+"X-Generator: Launchpad (build 15195)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
@@ -336,7 +336,7 @@ msgid "<i>Program Start</i>"
 msgstr "<i>Programa Abiarazi</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr ""
+msgstr "<big><b>Kanal laster-marka</b></big>"
 
 msgid "_Edit"
 msgstr "_Editatu"
