--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,15 @@
-sopcast-player (0.8.2~ppa~precise1) precise; urgency=low
+sopcast-player (0.8.5~ppa~precise1) precise; urgency=low
 
+   * 0.8.5
+     -Fixed bug in mimetype handler code
+     
+   * 0.8.4
+     -Credited Pietro Acinapura for his contribution in writing a Gentoo overlay
+     -Implemented mimetype handler code contributed by João Martins on google code
+     
+   * 0.8.3
+     -Fixed bug related to maxint introduced in 0.8.2
+     
    * 0.8.2
      -Added support for F11 fullscreen, and View->URL to view currently playing URL
 
@@ -101,4 +111,4 @@ sopcast-player (0.8.2~ppa~precise1) precise; urgency=low
   * 0.1.0
     -Initial release
     
- -- Jason Scheunemann <jason.scheunemann@yahoo.com>  Sun, 06 May 2012 16:51:00 -0800
+ -- Jason Scheunemann <jason.scheunemann@yahoo.com>  Tue, 15 May 2012 23:42:26 -0800
